--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ permalink: /404.html
     <div class="col col-12">
       <div class="error">
         <h2 class="error__title">Oops!</h2>
-        <img src="/images/404.jpg#wide" loading="lazy">
+        <img src="/images/headers/404.jpg#wide" loading="lazy">
         <p class="error__text">Have you tried taking the cartridge out and blowing on it?</p>
         <a class="button" href="/">Reset</a>
       </div>
