--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -3,7 +3,7 @@ layout: page
 title: Contact
 description:
 permalink: /contact/
-image: '/images/contact.jpg'
+image: '/images/headers/contact.jpg'
 ---
 
 <div class="form-box">
