--- a/files/journey/src/index.html
+++ b/files/journey/src/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Clint Bird</title>
-		<meta name="description" content="BIV Self Presentation" />
-		<meta name="keywords" content="self presentation, story, journey, assessment" />
-		<meta name="author" content="Clint Bird" />
-		<link rel="shortcut icon" href="favicon.ico">
+		<meta name="description" content="BIV Self Presentation">
+		<meta name="keywords" content="self presentation, story, journey, assessment">
+		<meta name="author" content="Clint Bird">
+		<link rel="shortcut icon" href="/favicon.26242483.ico">
 		<link rel="stylesheet" href="https://use.typekit.net/zns7sax.css">
-		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this page in a modern browser that supports CSS Variables");</script>
-	</head>
+		<link rel="stylesheet" type="text/css" href="/base.98fd6c19.css">
+		<script>document.documentElement.className = "js";
+var supportsCssVars = function () {
+  var e,
+    t = document.createElement("style");
+  return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e;
+};
+supportsCssVars() || alert("Please view this page in a modern browser that supports CSS Variables");</script>
+	<script src="/base.98fd6c19.js"></script><link rel="stylesheet" href="/js.00a46daa.css"></head>
 	<body class="loading">
 		<main>
 			<div class="frame">
 				<div class="frame__title"> 
-					<h1 class="frame__title-main">BIV Assessment Presentation</h1> 
+					<h1 class="frame__title-main">BIV Development Centre</h1> 
 				</div>
 				<nav class="frame__nav">
 					<button class="frame__nav-button unbutton">The Journey</button>
-					<button class="frame__nav-button unbutton">Stawell</button>
+					<button class="frame__nav-button unbutton">Automotive</button>
 					<button class="frame__nav-button unbutton">Traveling</button>
 					<button class="frame__nav-button unbutton">Airbus</button>
 					<button class="frame__nav-button unbutton">A350</button>
@@ -30,16 +36,16 @@
 					<button class="frame__nav-button unbutton">Today</button>
 				</nav>
 				<button class="frame__back unbutton">
-					<span data-splitting>&larr; Back To The Journey</span>
+					<span data-splitting="">&larr; Back To The Journey</span>
 				</button>
 				<span class="frame__info">Scroll &darr;</span>
 			</div>
 			<div class="slides">
 				<div class="slide">
 					<div class="slide__inner">
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/road.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/road.c96fe32b.jpg)"></div></div>
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/family.jpg)"></div>
+							<div class="slide__content-img" style="background-image:url(/family.1945b17b.jpg)"></div>
 							<h2>Clint Bird</h2>
 							<p>40 something year old father, husband, lean, digital enthusiast and aspiring chef!<br><br>Passionate about lean, technology, continuous improvement and applying the principles to all parts of my life - be it data science, business transformation or BBQ'ing!</p>
 						</div>
@@ -48,88 +54,88 @@
 				<div class="slide">
 					<div class="slide__inner">
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/aunde.avif)"></div>
+							<div class="slide__content-img" style="background-image:url(/aunde.d0c84820.avif)"></div>
 							<h2>Welcome To Manufacturing</h2>
 							<p>Traditional automotive industrial operation<br><br>Where my passion and love affair for lean was discovered</p>
 						</div>
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/stawell.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/stawell.5c3e6489.jpg)"></div></div>
 					</div>
 				</div>
 				<div class="slide">
 					<div class="slide__inner">
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/moustache.jpg)"></div>
+							<div class="slide__content-img" style="background-image:url(/moustache.3521e6ec.jpg)"></div>
 							<h2>🤦‍♂️</h2>
 							<p>Moustaches Don't Suit Me...</p>
 						</div>
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/backpacking.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/backpacking.2bfbba46.jpg)"></div></div>
 					</div>
 				</div>
 				<div class="slide">
 					<div class="slide__inner">
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/wood.avif)"></div>
+							<div class="slide__content-img" style="background-image:url(/wood.de1c6b4e.avif)"></div>
 							<h2>A350 Manufacturing Engineering</h2>
 							<p>German engineering +<br>Australian pragmatism<br>= Ontime for first flight</p>
 						</div>
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/a350.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/a350.dee53dbd.jpg)"></div></div>
 					</div>
 				</div>
 				<div class="slide">
 					<div class="slide__inner">
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/design_office.jpg)"></div>
+							<div class="slide__content-img" style="background-image:url(/design_office.76a146fc.jpg)"></div>
 							<h2>RC Reduction</h2>
 							<p>First time discovering the power of bringing lean and digital practices to knowledge based workers<br><br>• 115m€ Savings secured</p>
 						</div>
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/wing.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/wing.7c427f36.jpg)"></div></div>
 					</div>
 				</div>
 				<div class="slide">
 					<div class="slide__inner">
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/warehouse.jpg)"></div>
+							<div class="slide__content-img" style="background-image:url(/warehouse.8adc26ac.jpg)"></div>
 							<h2>Digital Transformation</h2>
 							<p>Disruptively challenging make or buy, upskilling people and adapting the culture - not just focused on the technology<br><br>Massive adoption rates & lead time reductions</p>
 						</div>
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/satair.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/satair.1d18c97d.jpg)"></div></div>
 					</div>
 				</div>
 				<div class="slide">
 					<div class="slide__inner">
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/helix.jpg)"></div>
+							<div class="slide__content-img" style="background-image:url(/helix.261d195d.jpg)"></div>
 							<h2>Closing The Gap</h2>
 							<p>Legacy companies have unique digital challenges<br><br>Strong leadership, grassroots understanding of the business and the technology itself is essential for true transformation</p>
 						</div>
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/bridge.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/bridge.cfe888fb.jpg)"></div></div>
 					</div>
 				</div>
 				<div class="slide">
 					<div class="slide__inner">
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/ecata.avif)"></div>
+							<div class="slide__content-img" style="background-image:url(/ecata.18a5a6e1.avif)"></div>
 							<h2>Passionate</h2>
 							<p>Presenting to ~700 industry partners and students<br><br>A call to action for current and future colleagues to step up and contribute to Aerospace's transition towards a sustainable future</p>
 						</div>
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/sustainable.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/sustainable.ece87654.jpg)"></div></div>
 					</div>
 				</div>
 				<div class="slide">
 					<div class="slide__inner">
 						<div class="slide__content">
-							<div class="slide__content-img" style="background-image:url(img/clint.jpg)"></div>
+							<div class="slide__content-img" style="background-image:url(/clint.da6240e4.jpg)"></div>
 							<h2>Clint Bird</h2>
-							<p>• 20+ Years Experience<br>• Employed In 3 Industries<br>• 160m€ Managed OPEX Budget<br>• Worked In 8 Countries<br>• 40+ Managed Reports<br>• Worked For 3 Divisions<br></p>
+							<p>• 20+ Years Experience<br>• Employed In 3 Industries<br>• 160m€ Managed OPEX Budget<br>• Worked In 5 Countries<br>• 40+ Managed Reports<br>• Worked For 2 Divisions<br></p>
 						</div>
-						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(img/road_alt.jpg)"></div></div>
+						<div class="slide__img"><div class="slide__img-inner" style="background-image:url(/road_alt.97a5b0cb.jpg)"></div></div>
 					</div>
 				</div>
 			</div>
 			<div class="cursor">
-				<span class="cursor__text" data-splitting>+ Details</span>
+				<span class="cursor__text" data-splitting="">+ Details</span>
 			</div>
 		</main>
-		<script type="module" src="js/index.js"></script>
+		<script type="module" src="/js.00a46daa.js"></script>
 	</body>
 </html>
