--- a/year/2024_alt/index.html
+++ b/year/2024_alt/index.html
@@ -22,7 +22,7 @@
 				</div>
 			</header>
 			<div class="content content--highlight content--intro">
-				<p class="text-large">As data conglomerates reveled in the opulence of cognitive wealth, a silent underclass manifested, condemned to the digital periphery.</p> 
+				<p class="text-medium">As data conglomerates reveled in the opulence of cognitive wealth, a silent underclass manifested, condemned to the digital periphery.</p> 
 			</div>
 			<div class="wrap">
 				<div class="content content--sticky content--grid bg-1">
